--- a/assets/paginas/contato.html
+++ b/assets/paginas/contato.html
@@ -177,15 +177,16 @@
       </section>
 
       <section class="footer-social">
-        <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
-          <img src="/assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+       <a href="https://www.instagram.com/gelateriahavana/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
         </a>
-        <a href="mailto:Contato@gelateriahavana.com.br">
-          <img src="/assets/images/icone-email.png" alt="clique para nos enviar um e-mail">
+        <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
+          <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://wa.me/+5513981739220">
-          <img src="/assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+        <a href="https://wa.me/+5513981739220"alt="Clique para saber nosso whatsapp" target="_blank" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
         </a>
+      </section>
       </section>
     </div>
   </footer>
