--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -35,7 +35,7 @@
             </nav>
           </div>
         </li>
-        <li><a href="../../index.html#sobre">Sobre</a></li>
+        <li><a href="/index.html#sobre">Sobre</a></li>
         <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </nav>
@@ -187,7 +187,7 @@
         <img src="../images/Gelato_CarameloSalgadoBrownie.webp" alt="Imagem do gelato de Caramelo Salgado com Brownie">
 
         <div class="textos-produto">
-          <figcaption>Caramelo Salgado com Brownie</figcaption>
+          <figcaption>Caramelo Salgado&Brownie</figcaption>
           <div class="tracinho"> </div>
           <p class="descricao">Saboroso Caramelo salgado artesanal mesclado com trufa e pedaços de brownie.</p>
         </div>
@@ -227,7 +227,7 @@
         <img src="../images/Gelato_Chocolate70Nibscacau.webp" alt="Imagem do gelato de Chocolate 70% Nibscacau">
 
         <div class="textos-produto">
-          <figcaption>Chocolate 70% Nibscacau</figcaption>
+          <figcaption>Choco 70% Nibscacau</figcaption>
           <div class="tracinho"> </div>
           <p class="descricao">Para os Apaixonados por chocolate 70%.</p>
         </div>
@@ -309,7 +309,7 @@
         <div class="textos-produto">
           <figcaption>Delírio</figcaption>
           <div class="tracinho"> </div>
-          <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="descricao">Sabor de Ninho com mesclas de morango.</p>
         </div>
       </figure>
 
@@ -613,7 +613,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana" class="logo-footer">
+        <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana" class="logo-footer">
       </div>
 
       <div class="footer-section">
@@ -631,9 +631,9 @@
           <li><a href="">Produtos Artesanais</a></li>
           <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
           <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-          <li><a href="">Diet</a></li>
-          <li><a href="#">Sobremesa</a></li>
-          <li><a href="#">Para Viagem</a></li>
+          <li><a href="/assets/paginas/outros.html">Diet</a></li>
+          <li><a href="/assets/paginas/outros.html">Sobremesa</a></li>
+          <li><a href="/assets/paginas/outros.html">Para Viagem</a></li>
         </ul>
       </div>
 
@@ -651,15 +651,16 @@
       </section>
 
       <section class="footer-social">
-        <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
-          <img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+        <a href="https://www.instagram.com/gelateriahavana/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
         </a>
-        <a href="mailto:Contato@gelateriahavana.com.br">
-          <img src="../images/icone-email.png" alt="clique para nos enviar um e-mail">
+        <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
+          <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://wa.me/+5513981739220">
-          <img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+        <a href="https://wa.me/+5513981739220"alt="Clique para saber nosso whatsapp" target="_blank" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
         </a>
+      </section>
       </section>
     </div>
   </footer>
