--- a/assets/paginas/outros.html
+++ b/assets/paginas/outros.html
@@ -35,7 +35,7 @@
             </nav>
           </div>
         </li>
-        <li><a href="../../index.html#sobre">Sobre</a></li>
+        <li><a href="/index.html#sobre">Sobre</a></li>
         <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </nav>
@@ -184,7 +184,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+        <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana">
       </div>
 
       <div class="footer-section">
@@ -202,9 +202,9 @@
           <li><a href="">Produtos Artesanais</a></li>
           <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
           <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-          <li><a href="">Diet</a></li>
-          <li><a href="#">Sobremesa</a></li>
-          <li><a href="#">Para Viagem</a></li>
+         <li><a href="/assets/paginas/outros.html">Diet</a></li>
+          <li><a href="/assets/paginas/outros.html">Sobremesa</a></li>
+          <li><a href="/assets/paginas/outros.html">Para Viagem</a></li>
         </ul>
       </div>
 
@@ -222,15 +222,16 @@
       </section>
 
       <section class="footer-social">
-        <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
-          <img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+        <a href="https://www.instagram.com/gelateriahavana/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
         </a>
-        <a href="mailto:Contato@gelateriahavana.com.br">
-          <img src="../images/icone-email.png" alt="clique para nos enviar um e-mail">
+        <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
+          <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://wa.me/+5513981739220">
-          <img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+        <a href="https://wa.me/+5513981739220"alt="Clique para saber nosso whatsapp" target="_blank" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
         </a>
+      </section>
       </section>
     </div>
   </footer>
