--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -36,7 +36,7 @@
           </div>
         </li>
         <li><a href="/index.html#sobre">Sobre</a></li>
-        <li><a href="">Contato</a></li>
+        <li><a href="../paginas/contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -272,7 +272,7 @@
       </section>
 
       <section class="footer-social">
-       <a href="https://www.instagram.com/gelateriahavana/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+       <a href="https://www.instagram.com/gelateriahavanapg/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
@@ -282,7 +282,7 @@
           <i class="fab fa-whatsapp"></i>
         </a>
       </section>
-      </section>
+      <span> <p>&copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </p></span>
     </div>
   </footer>
 
