--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:url" content="https://gelateriahavana.com.br/index.html" />
   <meta property="og:title" content="Gelateria Havana Praia Grande" />
   <meta property="og:description"
     content="Aqui na Havana temos produtos 100% artesanais, aqui o cliente é o chefe da sua experiência, temos uma diversidades de produtos prontos para cada tipo de paladar. Aqui é o melhor gelato da cidade, ficamos no inicio do bairro da ocian com divisa com a tupi frente a Praia." />
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="og:image" content="https://gelateriahavana.com.br/assets/images/nova_frente-da-gelateria-havana.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:url" content="https://gelateriahavana.com.br/index.html" />
   <meta property="twitter:title" content="Gelateria Havana Praia Grande" />
   <meta property="twitter:description"
     content="Aqui na Havana temos produtos 100% artesanais, aqui o cliente é o chefe da sua experiência, temos uma diversidades de produtos prontos para cada tipo de paladar. Aqui é o melhor gelato da cidade, ficamos no inicio do bairro da ocian com divisa com a tupi frente a Praia." />
-  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:image" content="https://gelateriahavana.com.br/assets/images/nova_frente-da-gelateria-havana.jpg" />
 
   <script type="application/ld+json">
 {
@@ -118,7 +118,7 @@
           </div>
         </li>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="assets/paginas/contato.html">Contato</a></li>
       </ul>
     </div>
   </nav>
@@ -209,7 +209,7 @@
 
         <figure class="produto">
           <img src="assets/images/petit-gateau-galeria.webp"
-            alt="foto de um petit gateau que é um bolo pequeno com com calda de chocolate e sorvete de creme em um prato azul">
+            alt="foto de um petit gateau que é um bolo pequeno com com calda de chocolate e sorvete de creme em um prato azul" >
           <figcaption>
             <h3>Petit Gateau</h3>
             <p><a href="assets/paginas/gelatos.html">Conheça Mais</p></a>
@@ -218,7 +218,7 @@
 
         <figure class="produto">
           <img src="assets/images/bananasplit-galeria.webp"
-            alt="foto de um banana split que é uma sobremesa com banana, sorvete de creme, chocolate e calda de morango e chantilly com cerejas e canudos de baunilha">
+            alt="foto de um banana split que é uma sobremesa com banana, sorvete de creme, chocolate e calda de morango e chantilly com cerejas e canudos de baunilha" >
           <figcaption>
             <h3>Banana Split</h3>
             <p><a href="assets/paginas/gelatos.html">Conheça Mais</p></a>
@@ -227,7 +227,7 @@
 
         <figure class="produto">
           <img src="assets/images/para-viagem-galeria.webp"
-            alt="foto de potes de sorvete para viagem na quantidade de 1,5 litros em vários sabores">
+            alt="foto de potes de sorvete para viagem na quantidade de 1,5 litros em vários sabores" >
           <figcaption>
             <h3>Potes para Viagem</h3>
             <p><a href="assets/paginas/gelatos.html">Conheça Mais</p></a>
@@ -236,7 +236,7 @@
 
         <figure class="produto">
           <img src="assets/images/cascao-galeria.webp"
-            alt="foto de um cascão de uma bola caprichada no sabor de pitaia na cor roxa forte com sementinhas pretas">
+            alt="foto de um cascão de uma bola caprichada no sabor de pitaia na cor roxa forte com sementinhas pretas" >
           <figcaption>
             <h3>Casquinha e cascão</h3>
             <p><a href="assets/paginas/gelatos.html">Conheça Mais</p></a>
@@ -245,7 +245,7 @@
 
         <figure class="produto">
           <img src="assets/images/acai-galeria.webp"
-            alt="foto de um acai tradicional com frutas como banana, kiwi e morango e uma colher amarela">
+            alt="foto de um acai tradicional com frutas como banana, kiwi e morango e uma colher amarela" >
           <figcaption>
             <h3>Açaí</h3>
             <p><a href="assets/paginas/gelatos.html">Conheça Mais</p></a>
@@ -257,11 +257,13 @@
 
     <section id="sobre" class="sobre-container">
 
-      <h2>Sobre</h2>
+      <h2 class="sobre-container">Sobre</h2>
       <img src="assets/images/nova_frente-da-gelateria-havana.jpg"
-        alt="fachada da gelateria com cadeiras na área externa" legend="fachada da gelateria Havana,imagem do local"
+        alt="fachada da gelateria com cadeiras na área externa" loading="lazy" legend="fachada da gelateria Havana,imagem do local"
         class="exterior">
-      <div class="texto-sobre">
+        
+        <div class="texto-sobre texto-colapsado" id="textoSobre">
+
         <p class="titulo-sobre">Nossa História</p>
         <p>A Gelateria Havana nasceu em 2002 do sonho do casal Mônica e Antonio (Neto), que começou vendendo sorvetes
           industrializados. Com o tempo, Antonio se especializou em sorvetes artesanais, adquirindo uma pequena
@@ -277,6 +279,7 @@
           nutricional. Nossa missão é proporcionar prazer e bem-estar por meio de sobremesas mais saudáveis, em um
           mercado
           repleto de opções industrializadas.</p>
+
         <p class="titulo-sobre">Missão e Motivação</p>
         <p>A missão da Gelateria Havana é oferecer momentos de prazer e bem-estar por meio de produtos artesanais,
           feitos com ingredientes de verdade e cuidado em cada detalhe. Acreditamos que é possível saborear algo
@@ -288,6 +291,8 @@
           Estamos localizados na Avenida Castelo Branco, 6920 – Ocian, Praia Grande – SP, em frente à praia — o cenário
           perfeito para aproveitar uma sobremesa especial.</p>
       </div>
+
+      <button id="toggleBtn" class="botao-ver-mais">Ver mais</button>
     </section>
 
 
@@ -363,7 +368,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+        <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana" loading="lazy">
       </div>
 
       <div class="footer-section">
@@ -400,7 +405,7 @@
       </section>
 
       <section class="footer-social">
-        <a href="https://www.instagram.com/gelateriahavana/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/gelateriahavanapg/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
@@ -410,6 +415,7 @@
           <i class="fab fa-whatsapp"></i>
         </a>
       </section>
+      <span> <p>&copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </p></span>
     </div>
   </footer>
   <script src="assets/JavaScript/script.js"></script>
