--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -67,7 +67,7 @@
           </div>
         </li>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="../paginas/contato.html">Contato</a></li>
       </ul>
     </div>
   </nav>
@@ -651,7 +651,7 @@
       </section>
 
       <section class="footer-social">
-        <a href="https://www.instagram.com/gelateriahavana/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/gelateriahavanapg/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
@@ -661,7 +661,7 @@
           <i class="fab fa-whatsapp"></i>
         </a>
       </section>
-      </section>
+     <span> <p>&copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </p></span>
     </div>
   </footer>
 
