hospedado, projeto executado

--- a/assets/paginas/contato.html
+++ b/assets/paginas/contato.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/responsive.css">
   <link rel="stylesheet" href="../css/styles.css">
-
+<title>Gelateria Havana</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             <nav id="dropdown-desktop" class="dropdown-content">
               <a href="../paginas/gelatos.html">Gelatos</a>
               <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Palletas</a>
+              <a href="../paginas/paletas.html">Paletas</a>
               <a href="../paginas/outros.html">Outros</a>
             </nav>
           </div>
@@ -59,10 +59,10 @@
               Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="dropdown-mobile" class="dropdown-content">
-              <a href="assets/paginas/gelatos.html">Gelatos</a>
-              <a href="assets/paginas/picoles.html">Picolés</a>
-              <a href="assets/paginas/paletas.html">Palletas</a>
-              <a href="assets/paginas/outros.html">Outros</a>
+              <a href="../paginas/gelatos.html">Gelatos</a>
+              <a href="../paginas/picoles.html">Picolés</a>
+              <a href="../paginas/paletas.html">Paletas</a>
+              <a href="../paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
@@ -78,10 +78,10 @@
       <h1>Fale conosco</h1>
       <p class="texto">Entre em contato. Deixe uma mensagem e ficaremos felizes em respondê-la.</p>
 
-      <section class="mensage">
+    <div class="mensage">
         <form action="https://formsubmit.co/assessoria.vivigomes@gmail.com" method="post">
           <label for="Nome">Nome</label><br>
-          <input type="text" id="nome" name="nome" required> <br>
+          <input type="text" id="Nome" name="Nome" required> <br>
 
           <label for="tel">Telefone</label> <br>
           <input type="tel" id="tel" name="tel" placeholder> <br>
@@ -96,12 +96,10 @@
         </form>
     </div>
 
-  </section>
-
   <div class="contato-icons">
     <a href="mailto:Contato@gelateriahavana.com.br" class="icone-contato" aria-label="Enviar email">
       <div class="icone-bg">
-        <img src="/assets/images/icon-email - Copia.png" alt="Ícone de email">
+        <img src="/assets/images/icon-email-Copia.png" alt="Ícone de email">
       </div>
       <span>Email</span>
     </a>
@@ -109,7 +107,7 @@
     <a href="https://wa.me/+5513981739220" class="icone-contato" target="_blank"
       aria-label="Enviar mensagem pelo WhatsApp">
       <div class="icone-bg">
-        <img src="/assets/images/icon-tel - Copia.png" alt="Ícone do WhatsApp">
+        <img src="/assets/images/icone-tel.png" alt="Ícone do WhatsApp">
       </div>
       <span>WhatsApp</span>
     </a>
@@ -117,13 +115,14 @@
     <a href="https://www.instagram.com/gelateriahavanapg?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
       class="icone-contato" aria-label="Entre em contato pelo instagram">
       <div class="icone-bg">
-        <img src="/assets/images/icon-instagram - Copia.png" alt="Ícone do Instagram">
+        <img src="/assets/images/icon-instagramCopia.png" alt="Ícone do Instagram">
       </div>
       <span>instagram</span>
     </a>
   </div>
 
-
+  </div>
+  </section>
 
   <h3>Onde Estamos</h3>
   <p>Avenida Castelo Branco, 6920 – Ocian, Praia Grande – SP</p>
@@ -134,7 +133,7 @@
       width="900" height="350" style="border:0;" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
-  <!------------------------------>
+  <!--fim-->
 
 
   <footer>
@@ -155,12 +154,12 @@
 
       <div class="footer-section">
         <ul class="#">
-          <li><a href="">Produtos Artesanais</a></li>
+          <!-- <li><a href="">Produtos Artesanais</a></li> -->
           <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
           <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-          <li><a href="">Diet</a></li>
-          <li><a href="#">Sobremesa</a></li>
-          <li><a href="#">Para Viagem</a></li>
+          <li><a href="/assets/paginas/outros.html">Diet</a></li>
+          <li><a href="/assets/paginas/outros.html">Sobremesa</a></li>
+          <li><a href="/assets/paginas/outros.html">Para Viagem</a></li>
         </ul>
       </div>
       <section class="#">
@@ -171,23 +170,22 @@
 
       <section class="footer-location">
         <h4>Localização:</h4>
-        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"
-            alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
-            Grande SP</p></a>
+        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"> Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
+            Grande SP</a></p>
       </section>
 
-      <section class="footer-social">
-       <a href="https://www.instagram.com/gelateriahavanapg/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+      <div class="footer-social">
+       <a href="https://www.instagram.com/gelateriahavanapg/"  target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
           <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://wa.me/+5513981739220"alt="Clique para saber nosso whatsapp" target="_blank" aria-label="WhatsApp">
+        <a href="https://wa.me/+5513981739220" target="_blank" aria-label="WhatsApp">
           <i class="fab fa-whatsapp"></i>
         </a>
-      </section>
-      <span> <p>&copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </p></span>
+      </div>
+      <span> &copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </span>
     </div>
   </footer>
   <script src="../JavaScript/script.js"></script>
