--- a/assets/paginas/outros.html
+++ b/assets/paginas/outros.html
@@ -30,7 +30,7 @@
             <nav id="dropdown-desktop" class="dropdown-content">
               <a href="../paginas/gelatos.html">Gelatos</a>
               <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Palletas</a>
+              <a href="../paginas/paletas.html">Paletas</a>
               <a href="../paginas/outros.html">Outros</a>
             </nav>
           </div>
@@ -61,7 +61,7 @@
             <nav id="dropdown-mobile" class="dropdown-content">
               <a href="../paginas/gelatos.html">Gelatos</a>
               <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Palletas</a>
+              <a href="../paginas/paletas.html">Paletas</a>
               <a href="../paginas/outros.html">Outros</a>
             </nav>
           </div>
@@ -71,18 +71,20 @@
       </ul>
     </div>
   </nav>
-  <!-- ------------------ -->
+  <!--fim-->
 
   <main class="container-produtos">
 
     <h1 class="titulo-produtos">Mais Opções</h1>
+
+    <p>Aqui esta outras opções que temos no nosso cardápio. Com nosso gelato tornamos sua experiência ainda melhor!</p>
 
     <section class="produtos">
 
 
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/acai-galeria.webp" alt="Imagem do nosso açaí na tigela com frutas e granola">
+        <img src="../images/acai-galeria.avif" alt="Imagem do nosso açaí na tigela com frutas e granola">
 
         <div class="textos-produto">
           <figcaption>Açai</figcaption>
@@ -92,7 +94,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/bananasplit-galeria.webp"
+        <img src="../images/bananasplit-galeria.avif"
           alt="Imagem da nossa Sobremesa Banana split que é feita com banana, sorvete e calda de chocolate">
 
         <div class="textos-produto">
@@ -103,7 +105,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/cascao-galeria.webp" alt="Imagem de um cascao com uma bola de sorvete de pistache">
+        <img src="../images/cascao-galeria.avif" alt="Imagem de um cascao com uma bola de sorvete de pistache">
 
         <div class="textos-produto">
           <figcaption>Cascão</figcaption>
@@ -114,7 +116,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/milkshake-galeria.webp"
+        <img src="../images/milkshake-galeria.avif"
           alt="Imagem de um copo de milk shake que é sorvete batido com leite e com canudo e cobrtura">
 
         <div class="textos-produto">
@@ -126,7 +128,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/petit-gateau-galeria.webp"
+        <img src="../images/petit-gateau-galeria.avif"
           alt="Imagem de um petit gateau com sorvete de creme e calda de chocolate">
 
 
@@ -139,7 +141,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/Sorvete-Artesanal-seflservice.webp"
+        <img src="../images/sorvete-artesanal-galeria.jpg"
           alt="Imagem de um pote de gelato com varios sabores com cobeertura e canudo comestivel">
 
 
@@ -152,7 +154,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ">
-        <img src="../images/para-viagem-galeria.webp" alt="Imagem de potes de gelato de 1 litro de diversos sabores">
+        <img src="../images/para-viagem-galeria.avif" alt="Imagem de potes de gelato de 1 litro de diversos sabores">
 
 
         <div class="textos-produto">
@@ -199,15 +201,14 @@
 
       <div class="footer-section">
         <ul class="#">
-          <li><a href="">Produtos Artesanais</a></li>
+          <!-- <li><a href="">Produtos Artesanais</a></li> -->
           <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
           <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-         <li><a href="/assets/paginas/outros.html">Diet</a></li>
+          <li><a href="/assets/paginas/outros.html">Diet</a></li>
           <li><a href="/assets/paginas/outros.html">Sobremesa</a></li>
           <li><a href="/assets/paginas/outros.html">Para Viagem</a></li>
         </ul>
       </div>
-
       <section class="#">
         <h4>Horário:</h4>
         <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
@@ -216,26 +217,24 @@
 
       <section class="footer-location">
         <h4>Localização:</h4>
-        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"
-            alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
-            Grande SP</p></a>
+        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"> Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
+            Grande SP</a></p>
       </section>
 
-      <section class="footer-social">
-        <a href="https://www.instagram.com/gelateriahavanapg/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+      <div class="footer-social">
+       <a href="https://www.instagram.com/gelateriahavanapg/"  target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
           <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://wa.me/+5513981739220"alt="Clique para saber nosso whatsapp" target="_blank" aria-label="WhatsApp">
+        <a href="https://wa.me/+5513981739220" target="_blank" aria-label="WhatsApp">
           <i class="fab fa-whatsapp"></i>
         </a>
-      </section>
-      <span> <p>&copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </p></span>
+      </div>
+      <span> &copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </span>
     </div>
   </footer>
-
   <script src="../JavaScript/script.js"></script>
 </body>
 
