--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -30,7 +30,7 @@
             <nav id="dropdown-desktop" class="dropdown-content">
               <a href="../paginas/gelatos.html">Gelatos</a>
               <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Palletas</a>
+              <a href="../paginas/paletas.html">Paletas</a>
               <a href="../paginas/outros.html">Outros</a>
             </nav>
           </div>
@@ -61,7 +61,7 @@
             <nav id="dropdown-mobile" class="dropdown-content">
               <a href="../paginas/gelatos.html">Gelatos</a>
               <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Palletas</a>
+              <a href="../paginas/paletas.html">Paletas</a>
               <a href="../paginas/outros.html">Outros</a>
             </nav>
           </div>
@@ -76,6 +76,8 @@
   <main class="container-produtos">
 
     <h1 class="titulo-produtos">Picolés</h1>
+
+    <p>Nossa Variedade tem sabor para agradar todo mundo.</p>
 
     <section class="produtos">
 
@@ -231,10 +233,10 @@
   <!------------------------------>
 
 
-  <footer>
+ <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana" class="logo-footer">
+        <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana">
       </div>
 
       <div class="footer-section">
@@ -249,15 +251,14 @@
 
       <div class="footer-section">
         <ul class="#">
-          <li><a href="">Produtos Artesanais</a></li>
+          <!-- <li><a href="">Produtos Artesanais</a></li> -->
           <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
           <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-          <li><a href="">Diet</a></li>
-          <li><a href="#">Sobremesa</a></li>
-          <li><a href="#">Para Viagem</a></li>
+          <li><a href="/assets/paginas/outros.html">Diet</a></li>
+          <li><a href="/assets/paginas/outros.html">Sobremesa</a></li>
+          <li><a href="/assets/paginas/outros.html">Para Viagem</a></li>
         </ul>
       </div>
-
       <section class="#">
         <h4>Horário:</h4>
         <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
@@ -266,26 +267,24 @@
 
       <section class="footer-location">
         <h4>Localização:</h4>
-        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"
-            alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
-            Grande SP</p></a>
+        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"> Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
+            Grande SP</a></p>
       </section>
 
-      <section class="footer-social">
-       <a href="https://www.instagram.com/gelateriahavanapg/"  alt="clique para acessar nosso Instagram em uma nova aba"target="_blank" aria-label="Instagram">
+      <div class="footer-social">
+       <a href="https://www.instagram.com/gelateriahavanapg/"  target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="mailto:Contato@gelateriahavana.com.br" aria-label="E-mail" target="_blank">
           <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://wa.me/+5513981739220"alt="Clique para saber nosso whatsapp" target="_blank" aria-label="WhatsApp">
+        <a href="https://wa.me/+5513981739220" target="_blank" aria-label="WhatsApp">
           <i class="fab fa-whatsapp"></i>
         </a>
-      </section>
-      <span> <p>&copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </p></span>
+      </div>
+      <span> &copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </span>
     </div>
   </footer>
-
   <script src="../JavaScript/script.js"></script>
 </body>
 
