--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    
+   <div class="btn-delivery">
+    <a href="https://pedido.anota.ai/loja/sorveteria-havana?f=ms" target="_blank" title="Peça pelo Delivery Gelateria Havana">
+      <img src="/assets/images/anota-ai-gestor-de-pedidos-logo.avif" alt="Ícone de entrega Anotaí" title="Peça seu pedido aqui!">
+     </a>
+    </div>
   <!-- Navbar desktop -->
   <header class="navbar">
     <figure class="logo">
@@ -71,7 +77,7 @@
       </ul>
     </div>
   </nav>
-  <!-- ------------------ -->
+  <!--end-->
 
   <main class="container-produtos">
 
@@ -82,7 +88,7 @@
     <section class="produtos">
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-acai.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-acai.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Açai</figcaption>
@@ -90,7 +96,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-amendoim.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-amendoim.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Amendoim</figcaption>
@@ -98,7 +104,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-bombom-tentacao.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-bombom-tentacao.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Bombom Tentação</figcaption>
@@ -106,7 +112,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-choco-coco.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-choco-coco.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Choco Coco</figcaption>
@@ -114,7 +120,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-chocolate.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-chocolate.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Chocolate</figcaption>
@@ -122,7 +128,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-coco-queimado.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-coco-queimado.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Coco Queimado</figcaption>
@@ -130,7 +136,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-coco.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-coco.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Coco</figcaption>
@@ -138,7 +144,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-graviola.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-graviola.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Graviola</figcaption>
@@ -146,7 +152,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-groselha.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-groselha.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Groselha</figcaption>
@@ -154,7 +160,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-leitecondensado.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-leitecondensado.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Leite Condensado</figcaption>
@@ -162,7 +168,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-leitinho.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-leitinho.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>leitinho</figcaption>
@@ -170,7 +176,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-limao.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-limao.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Limão</figcaption>
@@ -178,7 +184,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-maracuja.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-maracuja.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Maracujá</figcaption>
@@ -186,7 +192,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-milhoverde.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-milhoverde.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Milho Verde</figcaption>
@@ -194,7 +200,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-jabuticaba.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-jabuticaba.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Jabuticaba</figcaption>
@@ -202,7 +208,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-morango.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-morango.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Morango</figcaption>
@@ -210,7 +216,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-skimo.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-skimo.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Skimó</figcaption>
@@ -218,7 +224,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-uva.svg" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-uva.avif" alt="Descrição da foto 1">
 
         <div class="textos-produto-p">
           <figcaption>Uva</figcaption>
@@ -230,7 +236,7 @@
 
   </main>
 
-  <!------------------------------>
+  <!--end-->
 
 
  <footer>
@@ -251,7 +257,7 @@
 
       <div class="footer-section">
         <ul class="#">
-          <!-- <li><a href="">Produtos Artesanais</a></li> -->
+          <li><a href="/assets/paginas/contato.html">Seja um fornecedor</a></li>
           <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
           <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
           <li><a href="/assets/paginas/outros.html">Diet</a></li>
@@ -281,9 +287,11 @@
         <a href="https://wa.me/+5513981739220" target="_blank" aria-label="WhatsApp">
           <i class="fab fa-whatsapp"></i>
         </a>
+        </div>
+     
+       <span> &copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49</span>
+       <span><a href="/assets/paginas/politica-de-privacidade.html">Política de Privacidade</a></span>
       </div>
-      <span> &copy; 2025 Gelateria Havana CNPJ:08.431.443/0001-49 </span>
-    </div>
   </footer>
   <script src="../JavaScript/script.js"></script>
 </body>
